centralize ownership checks
